--- a/app/src/main/res/layout/fragment_pokedex.xml
+++ b/app/src/main/res/layout/fragment_pokedex.xml
@@ -28,20 +28,23 @@
         app:elevation="0dp">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fitsSystemWindows="false"
-            app:collapsedTitleTextAppearance="@style/AppTheme.Title.Collapsed"
-            app:expandedTitleTextAppearance="@style/AppTheme.Title.Expanded"
-            app:layout_scrollFlags="scroll|enterAlways|exitUntilCollapsed">
+            android:fitsSystemWindows="true"
+            app:contentScrim="?attr/colorPrimary"
+            app:expandedTitleMarginEnd="64dp"
+            app:expandedTitleMarginStart="48dp"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
+                app:layout_scrollFlags="scroll|enterAlways"
                 android:layout_gravity="bottom|end"
-                app:elevation="0dp"
-                app:layout_collapseMode="pin">
+                android:elevation="1dp"
+                android:minHeight="100dp">
 
                 <TextView
                     android:layout_width="wrap_content"
