--- a/app/src/main/res/layout/fragment_pokedex.xml
+++ b/app/src/main/res/layout/fragment_pokedex.xml
@@ -42,7 +42,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:layout_gravity="bottom|end"
-                android:elevation="0dp"
+                app:elevation="0dp"
                 app:layout_collapseMode="pin">
 
                 <TextView
